# niceapp

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
.nicegui/: storage-user-b5f0c8a3-d56f-434f-be2d-5094f1ce38fa.json
app/: config.py  main.py
app/api/: files.py
app/components/: directory_picker.py  document_dialog.py  inputs.py  layout.py
app/core/: accounting_logic.py  accounting_setup.py  auth.py  backup.py  database.py  document_data.py  document_engine.py  download_tokens.py  emergency_kit.py  file_crypto.py  file_manager.py  logger.py  speech.py
app/models/: accounting.py  app_setting.py  company_setting.py  finance_setting.py  log_entry.py  menu_item.py  patient.py  patient_file.py  role.py  user.py
app/pages/: dashboard.py  login.py  patient_detail.py  patients.py  setup.py
app/static/: style.css
data/: app.db
migrations/: env.py
migrations/versions/: 043122d804e7_initial_schema.py  04e0e82dcc5d_add_cancellation_to_patient_session_new_.py  059215fa237b_add_invoice_format.py  1695478e6ed7_initial_migration.py  2010acb78342_add_is_closed_to_patient_sessions.py  2f472fa2bfdc_add_loglevel.py  35c058aa2922_add_patient_sessions.py  474817755118_add_account_number_to_pyment_method.py  4a8bc534f1af_add_patient_relations.py  4bc7a5e918bd_add_app_settings_table.py  5b04cf4e35cc_add_cancellation_to_patient_session_new_.py  5e6282f610c2_add_account_number_to_pyment_method.py  695219a9111b_add_pathes_for_uploads_patients_and_.py  6e8297c615b0_add_accounting_foundation.py  77e39e5e21e9_add_invoice_details_to_patient_sessions.py  (+20 more)
(+10 files in other folders)
